2004-11-29	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-screen.c, terminal/terminal-shortcut-editor.c,
	  terminal/terminal-preferences.c, terminal/terminal-image-loader.c:
	  Drastically simplified the TerminalPreferences class. Its nearly
	  100% generic now.
	* terminal/terminal-accel-map.c: Call the notify handler directly
	  instead of calling g_object_notify.

2004-11-28	Benedikt Meurer <benny@xfce.org>

	* po/de.po, po/de.gmo: Fix version number.

2004-11-28	Benedikt Meurer <benny@xfce.org>

	* configure.ac, NEWS: Version 0.2.0pre2.
	* doc/: Updated online documentation for 0.2.0pre2.
	* po/: Ran make update-po. Updated german translations.

2004-11-27	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences-dialog.c: Widget layout fixes.
	* terminal/main.c: Don't print the usage screen to stderr if
	  --help was specified.
	* doc/, TODO: Updated online documentation with new screenshots,
	  hidden options and command line options.
	* terminal/terminal-screen.c, terminal/terminal-screen.h,
	  terminal/terminal-window.c, terminal/terminal-window.h,
	  terminal/terminal-app.c, terminal/terminal-widget.c,
	  terminal/terminal-widget.h: TerminalWidget is now a subclass
	  of VteTerminal and TerminalScreen includes the hbox with the
	  scrollbar.
	* terminal/terminal-widget.c, terminal/terminal-widget.h: Added a
	  work-around to allow passing mouse clicks to applications (like
	  mc) properly. This fixes #18.

2004-11-27	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences-dialog.c:  "Shortcut keys" is now
	  above the "Menubar access" controls.

2004-11-27	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-shortcut-editor.c, po/: Better error message dialog
	  when Terminal failes to grab the keyboard for shortcut input.
	* terminal/terminal-preferences-dialog.c: Revert bottom-margin change
	  to the shortcuts page, because it looks odd with themes other than
	  the ones included with Xfce.
